# async-zero-cost-templating

./: Cargo.toml  README.md
.cargo/: config.toml
async-zero-cost-templating/: Cargo.toml  test.html
async-zero-cost-templating-proc-macro/: Cargo.toml
async-zero-cost-templating-proc-macro/src/: lib.rs
async-zero-cost-templating-proc-macro/tests/ui/pass/: doctype.rs  empty.rs  for.rs  if.rs  if_else.rs  literal.rs  literal_and_variable.rs  variable.rs
async-zero-cost-templating-proc-macro2/: Cargo.toml
async-zero-cost-templating-proc-macro2/src/: codegen.rs  future_to_stream.rs  intermediate.rs  lib.rs  parse.rs
async-zero-cost-templating/src/: future_to_stream.rs  lib.rs
async-zero-cost-templating/tests/: attribute_for_equals_keyword.rs  attribute_for_keyword.rs  attribute_if.rs  attribute_with_dash.rs  composition.rs  composition_with_lifetime.rs  doctype.rs  element.rs  element_bug_1.rs  empty.rs  for.rs  getbootstrap.rs  if.rs  if_else.rs  literal.rs  literal_and_variable.rs  variable.rs
async-zero-cost-templating/tests/ui/compile_fail/: doctype.rs  doctype.stderr  empty.rs  empty.stderr  if_else_fail.rs  if_else_fail.stderr
async-zero-cost-templating/tests/ui/pass/: empty.rs
src/: lib.rs  parse.rs
