[package]
name = "async-zero-cost-templating"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { default-features = false, version = "1.5.0" }
futures-core = { default-features = false, version = "0.3.30" }
http-body = { default-features = false, version = "1.0.0" }
pin-project = { default-features = false, version = "1.1.3" }
