[package]
edition = "2021"
name    = "async-zero-cost-templating-proc-macro"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
async-zero-cost-templating-proc-macro2 = { default-features = false, path = "../async-zero-cost-templating-proc-macro2" }
quote                                  = { default-features = false, version = "1.0" }
syn                                    = { default-features = false, version = "2.0", features = ["parsing"] }
