[package]
edition = "2021"
name    = "async-zero-cost-templating-proc-macro"
version = "0.1.0"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
async-zero-cost-templating-proc-macro2 = { default-features = false, path = "../async-zero-cost-templating-proc-macro2" }
