[package]
edition = "2021"
name    = "async-zero-cost-templating-proc-macro2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { default-features = false, version = "1.5.0" }
futures-core = { default-features = false, version = "0.3.30" }
futures-util = { default-features = false, version = "0.3.30" }
http-body = { default-features = false, version = "1.0.0" }
pin-project = { default-features = false, version = "1.1.3" }
quote = { default-features = false, version = "1.0" }
syn = { default-features = false, version = "2.0", features = [
    "full",
    "parsing",
] }
tokio = { default-features = false, version = "1.35.1", features = [
    "macros",
    "rt",
] }
