[package]
edition = "2021"
name    = "async-zero-cost-templating-proc-macro2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { default-features = false, version = "1.0.78" }
proc-macro2-diagnostics = { default-features = false, version = "0.10.1" }
quote = { default-features = false, version = "1.0" }
syn = { default-features = false, version = "2.0", features = [
    "full",
    "parsing",
    "printing",
] }
